[tool.poetry]
name = "drift-clone"
version = "0.1.0"
description = ""
authors = ["soundsonacid <soundsonacid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
anchorpy = "0.17.1"
solana = "0.30.1"
tqdm = "^4.66.2"
pandas = "^2.2.0"
ipywidgets = "^8.1.2"
jupyter = "^1.0.0"
asyncio = "^3.4.3"
python-dotenv = "^1.0.1"
termcolor = "^2.4.0"
slack-sdk = "^3.27.0"
parsing = "^2.0.4"
pythclient = "0.1.4"
autopep8 = "2.0.2"
flake8 = "6.0.0"
driftpy = { git = "https://github.com/soundsonacid/driftpy.git", branch = "sims-stuff" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
